--- a/Shrek2-LiveSplit/Source/Shrek2-LiveSplit.csproj
+++ b/Shrek2-LiveSplit/Source/Shrek2-LiveSplit.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Shrek2_LiveSplit</RootNamespace>
     <AssemblyName>Shrek2-LiveSplit</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LiveSplit.Core">
-      <HintPath>..\..\..\..\LiveSplit\1.8.16\LiveSplit.Core.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\SpeedrunTools\LiveSplit_1.6.8\LiveSplit.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,7 +46,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UpdateManager">
-      <HintPath>..\..\..\..\LiveSplit\1.8.16\UpdateManager.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\SpeedrunTools\LiveSplit_1.6.8\UpdateManager.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
